Fix some bugs in ListWrapper and add unit tests